Step 3:  Move all non-test classes imported by cqf-fhir-benchmark into the main source folder and get rid of test-jar.  3 tests in cdf-fhir-cr-test are still failing due to resource not found issues.